tests/integration/errors/let-not-recursive/main.cx
let foo = fun (x) {
    foo(x)
}
